# cookiecutter-package

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.package_slug }}/: .isort.cfg  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  README.md  pyproject.toml
{{ cookiecutter.package_slug }}/.devcontainer/: Dockerfile  devcontainer.json
{{ cookiecutter.package_slug }}/.github/workflows/: ci.yml  release.yml
{{ cookiecutter.package_slug }}/docs/: Makefile  make.bat
{{ cookiecutter.package_slug }}/docs/source/: conf.py  example.ipynb
{{ cookiecutter.package_slug }}/src/{{ cookiecutter.package_slug }}/: __init__.py
{{ cookiecutter.package_slug }}/tests/: test_{{cookiecutter.package_slug}}.py
